[package]
name = "prist"
version = "0.1.0"
authors = ["Craig Barber <craigb@mojotech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow  = "1.0.28"
clap = "2.33.0"
config = "0.10.1"
git-url-parse = "0.1.0"
git2 = "0.13"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
