[package]
name = "prist"
version = "0.1.0"
authors = ["Craig Barber <craigb@mojotech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow  = "1.0.28"
bitbucket = "0.1.2-alpha.1"
clap = "2.33.0"
config = "0.10.1"
git-url-parse = "0.1.0"
git2 = "0.13"
log = "0.4"
pretty_env_logger = "0.4.0"
prettytable-rs = "^0.8"
restson = { git = "https://github.com/spietika/restson-rust.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
